fix change aside gap

--- a/source/css/_layout/aside.styl
+++ b/source/css/_layout/aside.styl
@@ -36,10 +36,10 @@
         margin-top: -.42em
 
     .site-data
-      margin: -5px 0 0px
+      margin: 10px 0 0px
 
     .card-info-social-icons
-      margin: -10px 0 -5px
+      margin: 0px 0 0px
 
       .social-icon
         margin: 0 10px
